# ChallengeWeek2025

./: ChallengeWeek_Presentation.ipynb  ChallengeWeek_Presentation.slides.html  main.py  pyproject.toml
